--- a/ChachaT/AboutView.xib
+++ b/ChachaT/AboutView.xib
@@ -15,38 +15,38 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="109"/>
+            <rect key="frame" x="0.0" y="0.0" width="374" height="49"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Char Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xnn-Sc-MjG">
                     <rect key="frame" x="286" y="0.0" width="88" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="The user types in biography(About) stuff in here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yC3-WE-D0E" customClass="MBAutoGrowingTextView">
-                    <rect key="frame" x="0.0" y="24" width="374" height="85"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bullet Point #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-1d-1wd">
+                    <rect key="frame" x="0.0" y="0.0" width="102" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yC3-WE-D0E" customClass="MBAutoGrowingTextView">
+                    <rect key="frame" x="0.0" y="24" width="374" height="25"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="85" id="fjQ-de-06u"/>
-                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="p5D-qH-9Vd"/>
+                        <constraint firstAttribute="height" constant="25" id="fjQ-de-06u"/>
+                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="500" id="p5D-qH-9Vd"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bullet Point #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-1d-1wd">
-                    <rect key="frame" x="0.0" y="0.0" width="102" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="yC3-WE-D0E" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="02B-pA-2FI"/>
                 <constraint firstAttribute="bottom" secondItem="yC3-WE-D0E" secondAttribute="bottom" id="16e-qS-E8Q"/>
                 <constraint firstItem="Xnn-Sc-MjG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="H64-Qo-TRC"/>
                 <constraint firstItem="yC3-WE-D0E" firstAttribute="top" secondItem="Xnn-Sc-MjG" secondAttribute="bottom" constant="3" id="PUx-io-G9m"/>
+                <constraint firstAttribute="bottom" secondItem="yC3-WE-D0E" secondAttribute="bottom" id="eWA-xC-IUo"/>
                 <constraint firstAttribute="trailing" secondItem="yC3-WE-D0E" secondAttribute="trailing" id="hnw-tT-1Ej"/>
                 <constraint firstAttribute="trailing" secondItem="Xnn-Sc-MjG" secondAttribute="trailing" id="kDU-dP-TgL"/>
                 <constraint firstItem="Lyx-1d-1wd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="omr-QF-Sv2"/>
@@ -59,7 +59,7 @@
                     <exclude reference="16e-qS-E8Q"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="547" y="309.5"/>
+            <point key="canvasLocation" x="547" y="279.5"/>
         </view>
     </objects>
 </document>
