--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -95,14 +95,14 @@
                         <viewControllerLayoutGuide type="bottom" id="zdl-Zf-LL4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ozl-f8-GDF">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="830"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u1t-Ch-jFt">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="766"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="155-yz-ccQ" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="766"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggM-LL-fqe" customClass="PhotoEditingMasterLayoutView" customModule="ChachaT" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="8" width="584" height="297"/>
@@ -111,25 +111,35 @@
                                                     <constraint firstAttribute="height" constant="297" id="H9E-bc-TbU"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qk4-LO-baz" customClass="AboutView" customModule="ChachaT" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="313" width="240" height="128"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="128" id="7bM-To-tg6"/>
-                                                    <constraint firstAttribute="width" constant="240" id="vPj-hh-vl3"/>
-                                                </constraints>
-                                            </view>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gwk-8T-bhR">
+                                                <rect key="frame" x="10" y="315" width="580" height="384"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="Qk4-LO-baz" customClass="AboutView" customModule="ChachaT" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="580" height="128"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="fZS-Hd-Cj9" customClass="AboutView" customModule="ChachaT" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="128" width="580" height="128"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="zDc-lg-16d" customClass="AboutView" customModule="ChachaT" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="256" width="580" height="128"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="28x-9I-4UJ"/>
+                                            <constraint firstAttribute="bottom" secondItem="gwk-8T-bhR" secondAttribute="bottom" constant="67" id="JS4-zR-K33"/>
                                             <constraint firstAttribute="width" constant="240" id="RJ5-KR-8fD"/>
-                                            <constraint firstAttribute="bottom" secondItem="Qk4-LO-baz" secondAttribute="bottom" constant="95" id="Y7m-MU-OBB"/>
+                                            <constraint firstItem="gwk-8T-bhR" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="10" id="RR0-kC-H8U"/>
+                                            <constraint firstAttribute="trailing" secondItem="gwk-8T-bhR" secondAttribute="trailing" constant="10" id="V8A-eb-sZk"/>
                                             <constraint firstAttribute="trailing" secondItem="ggM-LL-fqe" secondAttribute="trailing" constant="8" id="bVr-f2-njx"/>
                                             <constraint firstItem="ggM-LL-fqe" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="8" id="cfB-gR-WCw"/>
-                                            <constraint firstItem="Qk4-LO-baz" firstAttribute="top" secondItem="ggM-LL-fqe" secondAttribute="bottom" constant="8" id="puG-1N-ggy"/>
+                                            <constraint firstItem="gwk-8T-bhR" firstAttribute="top" secondItem="ggM-LL-fqe" secondAttribute="bottom" constant="10" id="msl-hx-M8j"/>
                                             <constraint firstItem="ggM-LL-fqe" firstAttribute="top" secondItem="155-yz-ccQ" secondAttribute="top" constant="8" id="uBR-nO-lGL"/>
-                                            <constraint firstItem="Qk4-LO-baz" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="8" id="xXz-kE-U9r"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -144,7 +154,17 @@
                                     <constraint firstItem="155-yz-ccQ" firstAttribute="top" secondItem="u1t-Ch-jFt" secondAttribute="top" id="7hg-Xk-kbd"/>
                                     <constraint firstItem="155-yz-ccQ" firstAttribute="leading" secondItem="u1t-Ch-jFt" secondAttribute="leading" id="JwV-S8-WEW"/>
                                     <constraint firstAttribute="bottom" secondItem="155-yz-ccQ" secondAttribute="bottom" id="MP9-kx-Kkt"/>
+                                    <constraint firstAttribute="bottom" secondItem="155-yz-ccQ" secondAttribute="bottom" id="e7H-Ro-hjk"/>
+                                    <constraint firstAttribute="bottom" secondItem="155-yz-ccQ" secondAttribute="bottom" id="mmy-Th-eQw"/>
+                                    <constraint firstAttribute="bottom" secondItem="155-yz-ccQ" secondAttribute="bottom" id="uEn-cE-zfm"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="MP9-kx-Kkt"/>
+                                        <exclude reference="e7H-Ro-hjk"/>
+                                        <exclude reference="mmy-Th-eQw"/>
+                                    </mask>
+                                </variation>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -154,6 +174,7 @@
                             <constraint firstItem="155-yz-ccQ" firstAttribute="width" secondItem="ozl-f8-GDF" secondAttribute="width" id="Myx-1t-K31"/>
                             <constraint firstAttribute="trailing" secondItem="u1t-Ch-jFt" secondAttribute="trailing" id="ieV-e7-1xR"/>
                             <constraint firstItem="u1t-Ch-jFt" firstAttribute="leading" secondItem="ozl-f8-GDF" secondAttribute="leading" id="s4y-IW-SIv"/>
+                            <constraint firstItem="zdl-Zf-LL4" firstAttribute="top" secondItem="u1t-Ch-jFt" secondAttribute="bottom" id="skq-vo-w2y"/>
                             <constraint firstItem="u1t-Ch-jFt" firstAttribute="width" secondItem="ozl-f8-GDF" secondAttribute="width" id="tiX-ry-aH3"/>
                             <constraint firstItem="zdl-Zf-LL4" firstAttribute="top" secondItem="u1t-Ch-jFt" secondAttribute="bottom" id="yTk-RI-LuJ"/>
                         </constraints>
@@ -161,6 +182,7 @@
                             <mask key="constraints">
                                 <exclude reference="8ds-f3-zZG"/>
                                 <exclude reference="tiX-ry-aH3"/>
+                                <exclude reference="yTk-RI-LuJ"/>
                             </mask>
                         </variation>
                     </view>
@@ -171,8 +193,14 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="830"/>
                     <connections>
                         <outlet property="photoLayoutView" destination="ggM-LL-fqe" id="Oyl-gv-X6X"/>
+                        <outlet property="theBulletPointOneView" destination="Qk4-LO-baz" id="a4t-H8-G8a"/>
+                        <outlet property="theBulletPointThreeView" destination="zDc-lg-16d" id="Oa9-Cc-kb9"/>
+                        <outlet property="theBulletPointTwoView" destination="fZS-Hd-Cj9" id="fAm-CS-fjo"/>
+                        <outlet property="theStackView" destination="gwk-8T-bhR" id="Xid-jN-aBy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9sO-nf-LbW" userLabel="First Responder" sceneMemberID="firstResponder"/>
